# ckanext-tfnsw

./: README.md  setup.cfg  setup.py
ckanext/adjustableiframeview/: README.md  plugin.py
ckanext/adjustableiframeview/public/: container_theme.css
ckanext/adjustableiframeview/templates/: adjustableiframe_form.html  adjustableiframe_view.html
ckanext/arcgisview/: README.md  helpers.py  plugin.py  utils.py
ckanext/arcgisview/templates/: arcgis_form.html  arcgis_view.html
ckanext/customauth/: README.md  apikeys.py  auth_functions.py  cookies.py  plugin.py
ckanext/discourse/: plugin.py
ckanext/discourse/templates/: discourse_comments.html
ckanext/iframe/: cli.py  helpers.py  plugin.py  views.py
ckanext/iframe/assets/: script.js  webassets.yml
ckanext/iframe/logic/: action.py  auth.py  schema.py  validators.py
ckanext/iframe/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/metrics/: plugin.py
ckanext/odiebot/: plugin.py
ckanext/odiebot/public/: odiebot.css  odiebot.js
ckanext/odiebot/templates/: page.html
ckanext/openapiview/: plugin.py
ckanext/powerbiview/: README.md  helpers.py  plugin.py
ckanext/powerbiview/templates/: powerbi_form.html  powerbi_view.html
ckanext/s3browse/: plugin.py
ckanext/s3browse/templates/: resource_view.html
ckanext/s3view/: plugin.py
ckanext/s3view/templates/: resource_view.html
ckanext/subscriptions/: plugin.py
ckanext/theme/: helpers.py  plugin.py
ckanext/theme/cli/: __init__.py  change_org_names.py
ckanext/theme/public/: theme.css
ckanext/userreg/: plugin.py  validators.py
(+37 files in other folders)
