[metadata]
name = ckanext-tfnsw
version = 0.0.1
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = 
author = Indika Udagedara
author_email = indika.udagedara@transport.nsw.gov.au
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan


[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
